--- a/stock_inspector/templates/fundamental.html
+++ b/stock_inspector/templates/fundamental.html
@@ -7,10 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Stock Inspector</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/myStyle.css')}}">
-  <link rel="icon" href="{{ url_for('static', filename='image/favicon.ico')}}">
-  <!-- <script src="{{ url_for('static', filename='js/fundamental.js')}}"></script> -->
-</head>
+  <link rel="stylesheet" href="/static/css/myStyle.css">
+  <link rel="icon" href="/static/image/favicon.ico">
+  </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -91,8 +90,8 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="{{ url_for('static', filename='js/fundamental.js')}}"></script>
-  <!-- <script src="/static/js/fundamental.js"></script> -->
+  <!-- <script src="{{ url_for('static', filename='js/fundamental.js')}}"></script> -->
+  <script src="/static/js/fundamental.js"></script>
 </body>
 
 </html>
