--- a/stock_inspector/templates/landingpage.html
+++ b/stock_inspector/templates/landingpage.html
@@ -178,9 +178,9 @@
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
   integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
   crossorigin=""></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="{{ url_for('static', filename='js/config.js')}}"></script>
-  <script src="{{ url_for('static', filename='js/fabienne.js')}}"></script>
+  <script src="{{ url_for('static', filename='js/landingpage.js')}}"></script>
 </body>
 </html>
