integrated Tanvir's price chart

--- a/stock_inspector/templates/environmental.html
+++ b/stock_inspector/templates/environmental.html
@@ -89,9 +89,9 @@
       </div>
     </footer>
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="js/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+  <!-- <script src="js/jquery.min.js"></script> -->
   <script src="{{ url_for('static', filename='js/environmental.js')}}"></script>
 </body>
 </html>
