--- a/stock_inspector/templates/technical.html
+++ b/stock_inspector/templates/technical.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Stock Inspector</title>
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/myStyle.css">
+    <link rel="stylesheet" href="/static/css/priceChart.css">
     <link rel="icon" href="{{url_for('static', filename='image/favicon.ico')}}">
 </head>
 
@@ -21,13 +20,13 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/fundamental">Fundamental</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/technical">Technical</a>
+                <a class="nav-link" href="/technical">Technical <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/environmental">Environmental</a>
@@ -58,7 +57,8 @@
         <div class="col-md-12">
           <div class="card">
             <div class="card-body">
-              <h3>What do we take into account when we say technical?</h3> 
+              <h3>Pick a stock</h3>
+              <select id="selTicker"></select>
  
               <br> 
               <br> 
@@ -76,8 +76,10 @@
       <div class="col-md-12">
         <div class="card">
           <div class="card-body">
-            <h3>Find your stock</h3> 
-            Insert Worldmap here<br>
+            <h3>Stock Price Chart</h3> 
+            <div id="priceChart">
+              <!-- We append our chart here. -->
+            </div>
             <br> 
           </div>
         </div>
@@ -89,9 +91,10 @@
       </div>
     </footer>
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script> -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="js/jquery.min.js"></script>
+  <script src='http://d3js.org/d3.v3.min.js' charset="utf-8"></script>
+  <!-- <script src="js/jquery.min.js"></script> -->
   <script src="{{ url_for('static', filename='js/technical.js')}}"></script>
 </body>
 </html>
