--- a/stock_inspector/templates/technical.html
+++ b/stock_inspector/templates/technical.html
@@ -93,7 +93,7 @@
   </div>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script> -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src='http://d3js.org/d3.v3.min.js' charset="utf-8"></script>
+  <script src='https://d3js.org/d3.v3.min.js' charset="utf-8"></script>
   <!-- <script src="js/jquery.min.js"></script> -->
   <script src="{{ url_for('static', filename='js/technical.js')}}"></script>
 </body>
