--- a/stock_inspector/templates/technical.html
+++ b/stock_inspector/templates/technical.html
@@ -45,7 +45,7 @@
             <div class="carousel-item active">
               <img src="{{url_for('static', filename='image/boot.png')}}" class="d-block w-100" alt="boot">
               <div class="carousel-caption d-none d-md-block">
-                <h3>Discover the technical data of our portfolio</h3>
+                <h3>Use Price and Volume data to predict future market behavior</h3>
                 <p></p>
               </div>
             </div>
@@ -59,7 +59,8 @@
             <div class="card-body">
               <h3>Pick a stock</h3>
               <select id="selTicker"></select>
- 
+              <input type="checkbox" id="appendCheck" name="append1">
+              <label for="append1">Append</label>  
               <br> 
               <br> 
               <br> 
@@ -76,7 +77,7 @@
       <div class="col-md-12">
         <div class="card">
           <div class="card-body">
-            <h3>Stock Price Chart</h3> 
+            <h3>Stock Price and Volume Chart</h3> 
             <div id="priceChart">
               <!-- We append our chart here. -->
             </div>
