--- a/stock_inspector/templates/fundamental.html
+++ b/stock_inspector/templates/fundamental.html
@@ -78,29 +78,30 @@
               
               </div>
               
-              <!-- Market Cap bar chart -->
-              <div class="col-md-5">
-                <div id="bar"></div>
-              </div>
-              
               <!-- Dividend Gauge -->
               <div class="col-md-4">
                 <div id="gauge"></div>
               </div>
+
+              <!-- Market Cap bar chart -->
+              <div class="col-md-5">
+                <h5>Top 10 Companies by 
+                  <select name="barChoice" id="selBar">
+                    <option value="marketCap">Makret Capitalization</option>
+                    <option value="dividendPct">Dividend Percent</option>
+                    <option value="peRatio">Price Earnings Ratio</option>
+                  </select>
+                </h5>
+                <div id="bar"></div>
+              </div>
+              
+              
             </div>
           </div>
             <br>
-             <br>
-              <br> 
-              <br> 
-            
             </div>
           </div>
-        <!-- </div> -->
     </div>
-    <br> 
-    <br> 
-    <br> 
     <br> 
     <div class="row">
       <div class="col-md-12">
