updated landing page and environmental page

--- a/stock_inspector/templates/fundamental.html
+++ b/stock_inspector/templates/fundamental.html
@@ -85,13 +85,13 @@
 
               <!-- Market Cap bar chart -->
               <div class="col-md-5">
-                <h5>Top 10 Companies by 
+                <div class="d-flex justify-content-center">  
                   <select name="barChoice" id="selBar">
                     <option value="marketCap">Makret Capitalization</option>
                     <option value="dividendPct">Dividend Percent</option>
                     <option value="peRatio">Price Earnings Ratio</option>
                   </select>
-                </h5>
+                </div>
                 <div id="bar"></div>
               </div>
               
