--- a/stock_inspector/templates/landingpage.html
+++ b/stock_inspector/templates/landingpage.html
@@ -132,7 +132,7 @@
                       <ul class="list-group" id="filters">
                         <li class="filter list-group-item">
                           <label for="ticker">Enter a Ticker</label>
-                          <input class="form-control" id="ticker" type="text" placeholder="AAPL">
+                          <input class="form-control" id="ticker" type="text" value="AAPL" placeholder="AAPL">
                         </li>
                       </ul>
                     </div>
