--- a/stock_inspector/templates/environmental.html
+++ b/stock_inspector/templates/environmental.html
@@ -79,6 +79,16 @@
         </div>
       </div>
     </div>
+      <br>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-body">  
+              <div id="esgBar"></div>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="footer mt-1 py-3">
       <div class="container text-center">
         <span class="mb-0"> Copyright © Stock Inspector</span>
@@ -87,7 +97,6 @@
   </div>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-  <!-- <script src="js/jquery.min.js"></script> -->
   <script src="{{ url_for('static', filename='js/environmental.js')}}"></script>
 </body>
 </html>
