--- a/stock_inspector/templates/fundamental.html
+++ b/stock_inspector/templates/fundamental.html
@@ -32,6 +32,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/environmental">Environmental</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/api">APIs</a>
+            </li>
           </ul>
         </div>
       </nav>
