--- a/stock_inspector/templates/landingpage.html
+++ b/stock_inspector/templates/landingpage.html
@@ -35,6 +35,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/environmental">Environmental</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/api">APIs</a>
+              </li>
             </ul>
           </div>
       </nav>
