--- a/stock_inspector/templates/landingpage.html
+++ b/stock_inspector/templates/landingpage.html
@@ -113,12 +113,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-      <div class="card">
-        <div class="card-body">
-          <h3>Our portfolio across the World</h3> 
-          <div id="mapid"></div>
-        </div>
-      </div>
+      <div id="pieChart"></div>
       </div>
     </div>
     <br> 
