--- a/stock_inspector/templates/api.html
+++ b/stock_inspector/templates/api.html
@@ -62,6 +62,15 @@
             <small><a href="/api/v1.0/company/msft">/api/v1.0/company/msft</a></small>
           </div>
         </div>
+        <div class="card">
+          <div class="card-header"><h5 class="card-title">Table Data for Landing Page</h5></div>
+          <div class="card-body">
+            <p>/api/v1.0/table</p>
+          </div>
+          <div class="card-footer">
+            <small><a href="/api/v1.0/table">/api/v1.0/table</a></small>
+          </div>
+        </div>
       </div>
     </div>
     <br>
