added Fabienne's datatables js code

--- a/stock_inspector/templates/landingpage.html
+++ b/stock_inspector/templates/landingpage.html
@@ -123,8 +123,8 @@
           <div class="card-body">
             <aside class="filters">
               <div class="panel panel-default">
-                <div class="panel-heading"><h3>Find your Stock in the Table</h3></div>
-                <div class="panel-body">
+                <div class="panel-heading"><h3>Use the Search Panel to Browse through the Table</h3></div>
+                <!-- <div class="panel-body">
                   <form id="filter">
                     <div class="form-group">
                       <ul class="list-group" id="filters">
@@ -137,7 +137,7 @@
                     <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                     <button id="reset-btn" type="button" class="btn btn-default">Reset Table</button>
                   </form>
-                </div>
+                </div> -->
               </div>
             </aside>
           </div>
@@ -173,7 +173,9 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  
+  <!-- including 2 links for table data   -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
+  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
   integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
   crossorigin=""></script>
