added Nicky's Map

--- a/stock_inspector/templates/environmental.html
+++ b/stock_inspector/templates/environmental.html
@@ -33,6 +33,9 @@
                 <a class="nav-link" href="/environmental">Environmental</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="/map">Map</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="/api">APIs</a>
               </li>
             </ul>
@@ -63,10 +66,10 @@
             <div class="card-body">
               <h3>What is ESG?</h3> 
               The ESG is a Risk Score that is composed of the Environment Risk Score, the Social Risk Score and the Governance Risk Score.
-              We adopt the ESG Risk Rating from Sustainanalytics. They rate the dgree to which a company's enterprise business value
+              We adopt the ESG Risk Rating from Sustainanalytics. They rate the degree to which a company's enterprise business value
               is at risk driven by environmental, social and governance issues. The rating employs a two-dimensional framework that
               combines an assessment of a company's exposure to industry-specific material ESG issues. The final ESG Risk Ratings scores
-              are a measure of unmanaged risk on an absolute scalre of 0-100, with a lower score signaling less unmanaged ESG Risk<br> 
+              are a measure of unmanaged risk on an absolute scale of 0-100, with a lower score signaling less unmanaged ESG Risk<br> 
             </div>
           </div>
         </div>
