--- a/stock_inspector/templates/technical.html
+++ b/stock_inspector/templates/technical.html
@@ -32,6 +32,9 @@
                 <a class="nav-link" href="/environmental">Environmental</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="/map">Map</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="/api">APIs</a>
               </li>
             </ul>
