--- a/stock_inspector/templates/fundamental.html
+++ b/stock_inspector/templates/fundamental.html
@@ -93,7 +93,7 @@
               <div class="col-md-5">
                 <div class="d-flex justify-content-center">  
                   <select name="barChoice" id="selBar">
-                    <option value="marketCap">Makret Capitalization</option>
+                    <option value="marketCap">Market Capitalization</option>
                     <option value="dividendPct">Dividend Percent</option>
                     <option value="peRatio">Price Earnings Ratio</option>
                   </select>
