--- a/stock_inspector/templates/landingpage.html
+++ b/stock_inspector/templates/landingpage.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Stock Inspector</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
@@ -20,6 +19,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
           <a class="navbar-brand" href="/"><img src="{{url_for('static', filename='image/StockInspectorLogo-2.png')}}"></a>
+          <!-- <a class="navbar-brand" href="/">Stock Inspector</a> -->
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
@@ -40,6 +40,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="/api">APIs</a>
               </li>
+
             </ul>
           </div>
       </nav>
@@ -104,7 +105,7 @@
                 <li>Paul Pineda</li>
               </ul>
               <h3>Data</h3> 
-              Our project uses data from the top 150 Fortune Global company stocks. We retrieved all the data from Yahoo Finance. 
+              Our project uses data from the top 171 Fortune Global company stocks. We retrieved all the data from Yahoo Finance. 
               <br> 
               <br> 
               <h3>Let's get started!</h3> 
