--- a/stock_inspector/templates/map.html
+++ b/stock_inspector/templates/map.html
@@ -23,7 +23,7 @@
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
 
-
+    <link rel="icon" href="{{url_for('static', filename='image/favicon.ico')}}">
 </head>
 
 <body>
