fixed card deck left margin

--- a/stock_inspector/templates/api.html
+++ b/stock_inspector/templates/api.html
@@ -44,7 +44,7 @@
       </nav>
     </header>
     <br>
-    <div class="row">
+    <div class="row ml-1">
       <div class="card-deck">
         <div class="card">
           <div class="card-header"><h5 class="card-title">All Company Data</h5></div>
@@ -78,7 +78,7 @@
       </div>
     </div>
     <br>
-    <div class="row">
+    <div class="row ml-1">
       <div class="card-deck">
         <div class="card">
           <div class="card-header"><h5 class="card-title">All Price data for a Single Company</h5></div>
