--- a/stock_inspector/templates/api.html
+++ b/stock_inspector/templates/api.html
@@ -46,9 +46,9 @@
     <br>
     <div class="row ml-1">
       <div class="card-deck">
-        <div class="card">
+        <div class="card border-success">
           <div class="card-header"><h5 class="card-title">All Company Data</h5></div>
-          <div class="card-body">
+          <div class="card-body text-success">
             <p>/api/v1.0/company</p>
             <p>All company data for all 171 companies in our database</p>
           </div>
@@ -56,9 +56,9 @@
             <small><a href="/api/v1.0/company">/api/v1.0/company</a></small>
           </div>
         </div>
-        <div class="card">
+        <div class="card border-success">
           <div class="card-header"><h5 class="card-title">Single Company Data</h5></div>
-          <div class="card-body">
+          <div class="card-body text-success">
             <p>/api/v1.0/company/ticker</p>
             <p>ticker: the company stock ticer</p>
           </div>
@@ -66,9 +66,9 @@
             <small><a href="/api/v1.0/company/msft">/api/v1.0/company/msft</a></small>
           </div>
         </div>
-        <div class="card">
+        <div class="card border-success">
           <div class="card-header"><h5 class="card-title">Table Data for Landing Page</h5></div>
-          <div class="card-body">
+          <div class="card-body text-success">
             <p>/api/v1.0/table</p>
           </div>
           <div class="card-footer">
@@ -80,9 +80,9 @@
     <br>
     <div class="row ml-1">
       <div class="card-deck">
-        <div class="card">
+        <div class="card border-success">
           <div class="card-header"><h5 class="card-title">All Price data for a Single Company</h5></div>
-          <div class="card-body">
+          <div class="card-body text-success">
             <p class="card-text">/api/v1.0/price/ticker</p>
             <p>ticker: company stock ticker</p>
           </div>
@@ -90,9 +90,9 @@
             <small><a href="/api/v1.0/price/msft">/api/v1.0/price/msft</a></small>
           </div>
         </div>
-        <div class="card">
+        <div class="card border-success">
           <div class="card-header"><h5 class="card-title">Price with Start Date</h5></div>
-          <div class="card-body">
+          <div class="card-body text-success">
             <p class="card-text">/api/v1.0/price/ticker/startdate</p>
             <p>ticker: company stock ticker</p>
             <p>startdate: startdate such as 2016-01-01</p>
@@ -101,9 +101,9 @@
             <small><a href="/api/v1.0/price/msft/2016-01-01">/api/v1.0/price/msft/2016-01-01</a></small>
           </div>
         </div>
-        <div class="card">
+        <div class="card border-success">
           <div class="card-header"><h5 class="card-title">Price with Start Date and End Date</h5></div>
-          <div class="card-body">
+          <div class="card-body text-success">
             <p class="card-text">/api/v1.0/price/ticker/startdate/enddate</p>
             <p>ticker: company stock ticker</p>
             <p>startdate: start date such as 2016-01-01</p>
