--- a/stock_inspector/templates/fundamental.html
+++ b/stock_inspector/templates/fundamental.html
@@ -8,41 +8,11 @@
   <title>Stock Inspector</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="static/css/myStyle.css">
-  <link rel="icon" href="{{url_for('static', filename='image/favicon.ico')}}">
+  <link rel="icon" href="/static/image/favicon.ico">
 </head>
-
 <body>
   <div class="container">
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <a class="navbar-brand" href="/"><img src="{{url_for('static', filename='image/StockInspectorLogo-2.png')}}"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">  
-          <ul class="navbar-nav mr-auto"> 
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/fundamental">Fundamental</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/technical">Technical</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/environmental">Environmental</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/map">Map</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/api">APIs</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+    {% include "header.html" %}
     <div class="row">
       <div class="col-md-12">
         <div id="my-slider" class="carousel slide" data-ride="carousel">
@@ -125,20 +95,14 @@
         </div>
       </div>
     </div>
-    <footer class="footer mt-1 py-3">
-      <div class="container text-center">
-        <span class="mb-0"> Copyright © Stock Inspector</span>
-      </div>
-    </footer>
+    {% include "footer.html" %}
   </div>
-</div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-  <script src="{{ url_for('static', filename='js/fundamental.js')}}"></script>
+  <script src="/static/js/fundamental.js"></script>
 </body>
 
 </html>
