--- a/stock_inspector/templates/header.html
+++ b/stock_inspector/templates/header.html
@@ -24,6 +24,9 @@
         <li class="nav-item">
           <a class="nav-link text-success" href="/api">APIs</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-success" href="/about">About</a>
+        </li>
       </ul>
     </div>
   </nav>
