promoted Nicky to CFO

--- a/stock_inspector/templates/about.html
+++ b/stock_inspector/templates/about.html
@@ -52,7 +52,7 @@
                   <div class="card-header">Nicky Pant</div>
                   <img src="/static/image/nicky.png" class="card-img-top" alt="Nicky Pant">
                   <div class="card-body">
-                    <h4 class="card-title">Financial Advisor</h4>
+                    <h4 class="card-title">CFO</h4>
                     <p class="card-text text-success">“I love when stocks hit the moon and I see my clients happy”</p>
                   </div>
                 </div>
